backend fixed for new requirements
