# backend/src/interfaces/requests/role.ts
@@ -1,11 +1,7 @@
-import { Types } from "mongoose";
-
 export interface NewRoleRequestBody {
   name: string;
-  applicants?: Types.ObjectId[];
 }
 
 export interface UpdateRoleRequestBody {
   name?: string;
-  applicants?: Types.ObjectId[];
 }
